--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label for="email" style="color: #db6500">Email</label>
-                        <input type="email" id="emailid" name="" class="form-control" placeholder="Enter Emialid">
+                        <input type="email" id="emailid" name="" class="form-control" placeholder="Enter Emailid">
                         <h5 id="emailvalidation"></h5>
                     </div>
                     <input type="button" value="submit" class="=btn btn-primary" id="btn" >
